# aoc2021

./: .gitignore  README.md  pyproject.toml  runhaskell.sh  runner.py  runner.sh  runpoetry.sh  runpy.sh
.github/workflows/: aoc-run.yml  day_6.yml  gh.yml
common/: timer.py  trace.hs
day01/: day01.py
day02/: day02.hs  day02.py
day03/: day03.py
day05/: day05.py
day06/: day06.hs  day06.py
day07/: day07.hs  day07.py
day08/: day08.hs  day08.py
day09/: day09.hs  day09.py  test_data_b.txt
day1/: day1.hs  day1.py
day10/: day10.hs  day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day14/: day14.py
day15/: day15.py  day15_dfs.py
day16/: day16.py  temp.txt
day17/: day17.py
day2/: day2.hs  day2.py
day3/: day3.hs  day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.hs  day6.py
day7/: day7.hs  day7.py
day9/: day9.py
