[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "lets try this again"
authors = ["Arnav <arnav.jindal7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
Pillow = "^8.4.0"
pytesseract = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
